<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_alert_dailog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dp48"
        android:background="@drawable/bg_white_corner"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:gravity="center"
            android:text="@string/str_log_out_of_ubaworld"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="@dimen/dp10"
            android:paddingLeft="@dimen/dp10"
            android:paddingEnd="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_logout_confirm_msg"
            android:fontFamily="@font/montserrat_light"
            android:paddingStart="@dimen/dp10"
            android:paddingLeft="@dimen/dp10"
            android:paddingEnd="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:textColor="@color/sign_up_black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/dp16"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_NotNow"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp40"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/str_not_now"
                android:fontFamily="@font/montserrat_light"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp16" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="@dimen/dp40"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_Yes"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp40"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/str_yes"
                android:fontFamily="@font/montserrat_light"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>