<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragment.CompanyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_company_line1"
            android:lineSpacingExtra="@dimen/dp6"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp24"
            android:gravity="center"
            android:text="@string/str_company_line2"
            android:lineSpacingExtra="@dimen/dp6"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:gravity="center"
            android:text="@string/str_company_line3"
            android:lineSpacingExtra="@dimen/dp6"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/dp6"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

    </LinearLayout>

</RelativeLayout>